--- a/index.html
+++ b/index.html
@@ -1,53 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Naimjon Resume</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Naimjon Resume</title>
 
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #f2f2f2;
-        }
+<style>
+    body {
+        margin: 0;
+        background: #e8e8e8;
+        font-family: Arial, sans-serif;
+    }
 
-        .viewer {
-            height: 100vh;
-            width: 100%;
-        }
+    #toolbar {
+        width: 100%;
+        background: #222;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        position: fixed;
+        top: 0;
+        z-index: 9999;
+    }
 
-        .download-btn {
-            position: fixed;
-            top: 15px;
-            right: 15px;
-            padding: 10px 18px;
-            background: #007bff;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 6px;
-            font-size: 16px;
-            z-index: 999;
-        }
+    #toolbar button, #toolbar a {
+        background: #444;
+        color: #fff;
+        border: none;
+        padding: 8px 14px;
+        border-radius: 5px;
+        cursor: pointer;
+        text-decoration: none;
+    }
 
-        .download-btn:hover {
-            background: #0056b3;
-        }
-    </style>
+    #toolbar button:hover, #toolbar a:hover {
+        background: #666;
+    }
+
+    #viewer {
+        width: 100%;
+        height: 100vh;
+        margin-top: 50px;
+        border: none;
+    }
+
+    #loading {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 22px;
+        color: #222;
+    }
+
+    #fallback {
+        display: none;
+        margin-top: 80px;
+        text-align: center;
+        font-size: 22px;
+        color: #111;
+    }
+
+</style>
+
 </head>
 <body>
 
-<!-- RAW GitHub PDF Link -->
-<a class="download-btn"
-   href="https://raw.githubusercontent.com/Inomjonoff/resume/aec6a1fa3deaee3e0e80fd5ff3537580939fdda2/Naimjon_Inomjonov_Resume.pdf"
-   download>
-    Download PDF
-</a>
+<!-- 🔧 PDF RAW GitHub link -->
+<script>
+    const pdfURL = "https://raw.githubusercontent.com/Inomjonoff/resume/aec6a1fa3deaee3e0e80fd5ff3537580939fdda2/Naimjon_Inomjonov_Resume.pdf";
+</script>
 
-<iframe 
-    class="viewer"
-    src="https://raw.githubusercontent.com/Inomjonoff/resume/aec6a1fa3deaee3e0e80fd5ff3537580939fdda2/Naimjon_Inomjonov_Resume.pdf">
-</iframe>
+<div id="toolbar">
+    <button onclick="zoomIn()">Zoom +</button>
+    <button onclick="zoomOut()">Zoom -</button>
+    <button onclick="fullscreen()">Fullscreen</button>
+
+    <a href="#" id="downloadBtn" download>Download PDF</a>
+</div>
+
+<div id="loading">Loading PDF...</div>
+
+<iframe id="viewer"></iframe>
+
+<div id="fallback">
+    ❗ Browser PDF ni ochmadi.  
+    <br><br>
+    <a href="#" id="fallbackDownload" download>Click to Download Resume</a>
+</div>
+
+<script>
+    let scale = 1.0;
+
+    document.getElementById("downloadBtn").href = pdfURL;
+    document.getElementById("fallbackDownload").href = pdfURL;
+
+    const viewer = document.getElementById("viewer");
+    viewer.src = pdfURL;
+
+    // PDF yuklanganini tekshiramiz
+    viewer.onload = () => {
+        document.getElementById("loading").style.display = "none";
+    };
+
+    viewer.onerror = () => {
+        document.getElementById("loading").style.display = "none";
+        document.getElementById("fallback").style.display = "block";
+    };
+
+    function zoomIn() {
+        scale += 0.2;
+        viewer.style.transform = `scale(${scale})`;
+        viewer.style.transformOrigin = "top center";
+    }
+
+    function zoomOut() {
+        if (scale > 0.4) {
+            scale -= 0.2;
+            viewer.style.transform = `scale(${scale})`;
+            viewer.style.transformOrigin = "top center";
+        }
+    }
+
+    function fullscreen() {
+        if (viewer.requestFullscreen) viewer.requestFullscreen();
+    }
+</script>
 
 </body>
 </html>
